[gd_scene load_steps=23 format=3 uid="uid://dwn421e84lwgh"]

[ext_resource type="Script" path="res://scripts/bat.gd" id="1_mrof4"]
[ext_resource type="Texture2D" uid="uid://bniw6epfrnd46" path="res://assets/32x32-bat-sprite.png" id="2_7pgxy"]
[ext_resource type="PackedScene" uid="uid://dmlnwioja4n65" path="res://Components/movement_component.tscn" id="4_anqmp"]
[ext_resource type="PackedScene" uid="uid://xsf1oxypnpyk" path="res://Components/hurtbox_component.tscn" id="5_qrvo7"]
[ext_resource type="PackedScene" uid="uid://cdoyhriv36rm3" path="res://Components/health_component.tscn" id="6_xdq20"]
[ext_resource type="PackedScene" uid="uid://b7ja4o26feoot" path="res://Components/enemy_direction_finder_component.tscn" id="7_afln8"]
[ext_resource type="PackedScene" uid="uid://cw5mav0m0jou3" path="res://Components/animator_component.tscn" id="8_wdxbn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yarxo"]
atlas = ExtResource("2_7pgxy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6mig"]
atlas = ExtResource("2_7pgxy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b7de"]
atlas = ExtResource("2_7pgxy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wub2t"]
atlas = ExtResource("2_7pgxy")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jfgy"]
atlas = ExtResource("2_7pgxy")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu5kh"]
atlas = ExtResource("2_7pgxy")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekgee"]
atlas = ExtResource("2_7pgxy")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6upmy"]
atlas = ExtResource("2_7pgxy")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dld33"]
atlas = ExtResource("2_7pgxy")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gyky"]
atlas = ExtResource("2_7pgxy")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20kef"]
atlas = ExtResource("2_7pgxy")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_620yp"]
atlas = ExtResource("2_7pgxy")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n84ho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yarxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6mig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b7de")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wub2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jfgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu5kh")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekgee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6upmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dld33")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gyky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20kef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_620yp")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uctud"]
radius = 19.0

[sub_resource type="GDScript" id="GDScript_0mnxr"]
script/source = "extends CollisionShape2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Bat" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_mrof4")
max_health = 2
metadata/_edit_group_ = true

[node name="EnemyAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_n84ho")
animation = &"walk_up"
frame_progress = 0.424415

[node name="EnemyCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_uctud")
script = SubResource("GDScript_0mnxr")

[node name="MovementComponent" parent="." node_paths=PackedStringArray("direction_component", "knock_timer") instance=ExtResource("4_anqmp")]
direction_component = NodePath("../EnemyDirectionFinderComponent")
knock_timer = NodePath("../KnockTimer")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("collision_area", "health_component") instance=ExtResource("5_qrvo7")]
collision_area = NodePath("../EnemyCollisionBox")
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("6_xdq20")]

[node name="EnemyDirectionFinderComponent" parent="." instance=ExtResource("7_afln8")]

[node name="AnimatorComponent" parent="." node_paths=PackedStringArray("direction_component") instance=ExtResource("8_wdxbn")]
direction_component = NodePath("../EnemyDirectionFinderComponent")

[node name="KnockTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="change_health" from="HurtboxComponent" to="HealthComponent" method="_on_hurtbox_component_change_health"]
[connection signal="knock_back" from="HurtboxComponent" to="MovementComponent" method="_on_hurtbox_component_knock_back"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="is_dead" from="HealthComponent" to="." method="_on_health_component_is_dead"]
[connection signal="timeout" from="KnockTimer" to="MovementComponent" method="_on_knock_timer_timeout"]
